hphp/test/slow/type-refinements/in-type-struct_is-expr-nested-bad.php.expectf
Fatal error: Refinement in type structure in %s on line 8
